--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <header>
     <h1>Welcome to Di Adore</h1>
     <p>Christian Devotional Articles Store</p>
-    <a class="whatsapp-button" href="https://wa.me/91XXXXXXXXXX" target="_blank">
+    <a class="whatsapp-button" href="https://wa.me/919074086052" target="_blank">
       Message Us on WhatsApp
     </a>
   </header>
