--- a/index.html
+++ b/index.html
@@ -1,6 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <style>
+  body {
+    margin: 0;
+    font-family: 'Segoe UI', sans-serif;
+    background: linear-gradient(to right, #ffecd2, #fcb69f);
+    color: #333;
+    text-align: center;
+  }
+
+  header {
+    background-color: #ff6f61;
+    color: white;
+    padding: 20px 0;
+    font-size: 32px;
+    font-weight: bold;
+  }
+
+  section {
+    padding: 40px 20px;
+    background-color: #ffffffaa;
+    margin: 20px auto;
+    max-width: 800px;
+    border-radius: 12px;
+    box-shadow: 0 0 20px rgba(0,0,0,0.1);
+  }
+
+  a.button {
+    background-color: #25D366;
+    color: white;
+    padding: 12px 24px;
+    text-decoration: none;
+    border-radius: 30px;
+    font-size: 18px;
+    display: inline-block;
+    margin-top: 20px;
+    transition: 0.3s;
+  }
+
+  a.button:hover {
+    background-color: #128c7e;
+  }
+
+  footer {
+    background-color: #eeeeee;
+    padding: 15px;
+    font-size: 14px;
+    color: #666;
+  }
+  </style>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Di Adore - Christian Devotional Store</title>
