--- a/index.html
+++ b/index.html
@@ -111,6 +111,41 @@
       Message Us on WhatsApp
     </a>
   </header>
+  <section>
+  <h2>🛍️ Our Products</h2>
+  <p style="margin-bottom: 30px;">Explore our collection of Christian devotional items</p>
+
+  <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 20px;">
+
+    <div><img src="https://i.ibb.co/7tbBzDPt" alt="Product 1" style="width: 180px; border-radius: 10px;"><p>Product 1</p></div>
+    <div><img src="https://i.ibb.co/W4bNf47D" alt="Product 2" style="width: 180px; border-radius: 10px;"><p>Product 2</p></div>
+    <div><img src="https://i.ibb.co/nsyqZ5cj" alt="Product 3" style="width: 180px; border-radius: 10px;"><p>Product 3</p></div>
+    <div><img src="https://i.ibb.co/LDvRD6g1" alt="Product 4" style="width: 180px; border-radius: 10px;"><p>Product 4</p></div>
+    <div><img src="https://i.ibb.co/8p9NbtG" alt="Product 5" style="width: 180px; border-radius: 10px;"><p>Product 5</p></div>
+    <div><img src="https://i.ibb.co/RTVmq8D6" alt="Product 6" style="width: 180px; border-radius: 10px;"><p>Product 6</p></div>
+    <div><img src="https://i.ibb.co/nNSj2GmC" alt="Product 7" style="width: 180px; border-radius: 10px;"><p>Product 7</p></div>
+    <div><img src="https://i.ibb.co/nsG4tH4j" alt="Product 8" style="width: 180px; border-radius: 10px;"><p>Product 8</p></div>
+    <div><img src="https://i.ibb.co/gFZSDLPN" alt="Product 9" style="width: 180px; border-radius: 10px;"><p>Product 9</p></div>
+    <div><img src="https://i.ibb.co/fGxpqVJw" alt="Product 10" style="width: 180px; border-radius: 10px;"><p>Product 10</p></div>
+    <div><img src="https://i.ibb.co/F4T4qy6S" alt="Product 11" style="width: 180px; border-radius: 10px;"><p>Product 11</p></div>
+    <div><img src="https://i.ibb.co/p6CvMRrX" alt="Product 12" style="width: 180px; border-radius: 10px;"><p>Product 12</p></div>
+    <div><img src="https://i.ibb.co/NgGkPY6V" alt="Product 13" style="width: 180px; border-radius: 10px;"><p>Product 13</p></div>
+    <div><img src="https://i.ibb.co/PSndP3B" alt="Product 14" style="width: 180px; border-radius: 10px;"><p>Product 14</p></div>
+    <div><img src="https://i.ibb.co/xqJfZ0Js" alt="Product 15" style="width: 180px; border-radius: 10px;"><p>Product 15</p></div>
+    <div><img src="https://i.ibb.co/KxD2QpmR" alt="Product 16" style="width: 180px; border-radius: 10px;"><p>Product 16</p></div>
+    <div><img src="https://i.ibb.co/bnTqtgc" alt="Product 17" style="width: 180px; border-radius: 10px;"><p>Product 17</p></div>
+    <div><img src="https://i.ibb.co/yBnTMzcp" alt="Product 18" style="width: 180px; border-radius: 10px;"><p>Product 18</p></div>
+    <div><img src="https://i.ibb.co/N2GfSB1n" alt="Product 19" style="width: 180px; border-radius: 10px;"><p>Product 19</p></div>
+    <div><img src="https://i.ibb.co/CKMKJDBv" alt="Product 20" style="width: 180px; border-radius: 10px;"><p>Product 20</p></div>
+    <div><img src="https://i.ibb.co/pBDL4Qd9" alt="Product 21" style="width: 180px; border-radius: 10px;"><p>Product 21</p></div>
+    <div><img src="https://i.ibb.co/qYkzKdy9" alt="Product 22" style="width: 180px; border-radius: 10px;"><p>Product 22</p></div>
+    <div><img src="https://i.ibb.co/v4C2QWL3" alt="Product 23" style="width: 180px; border-radius: 10px;"><p>Product 23</p></div>
+    <div><img src="https://i.ibb.co/KjyYx4CZ" alt="Product 24" style="width: 180px; border-radius: 10px;"><p>Product 24</p></div>
+    <div><img src="https://i.ibb.co/n85pF8fv" alt="Product 25" style="width: 180px; border-radius: 10px;"><p>Product 25</p></div>
+    <div><img src="https://i.ibb.co/TDh5h6NZ" alt="Product 26" style="width: 180px; border-radius: 10px;"><p>Product 26</p></div>
+
+  </div>
+  </section>
 
   <section>
     <h2>Our Products</h2>
