--- a/index.html
+++ b/index.html
@@ -140,5 +140,27 @@
       </div>
     </div>
   </section>
+  <body style="background-color: #f7f3f0; font-family: Arial, sans-serif; padding: 20px;">
+
+  <h2 style="text-align: center; color: #7B3F00;">🛍️ Our Products</h2>
+  <p style="text-align: center; margin-bottom: 30px; color: #444;">Explore our collection of Christian devotional items</p>
+
+  <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 20px;">
+
+    <!-- Product example (repeat this block for each image) -->
+    <div style="text-align: center; transition: transform 0.3s; cursor: pointer;"
+         onmouseover="this.style.transform='scale(1.05)'"
+         onmouseout="this.style.transform='scale(1)'">
+      <img src="https://i.ibb.co/nsyqZ5c/IMG-3.jpg" alt="Product 1"
+           style="width: 180px; border-radius: 15px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
+      <p style="margin-top: 10px; color: #333;">Product 1</p>
+    </div>
+
+    <!-- Add all other products the same way: -->
+    <!-- Copy-paste the above <div> and replace image links and product names -->
+
+  </div>
+
+  </body>
 </body>
 </html>
