--- a/index.html
+++ b/index.html
@@ -111,6 +111,69 @@
       Message Us on WhatsApp
     </a>
   </header>
+  <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Di Adore Products</title>
+  <style>
+    body {
+      background-color: #f3f4f6;
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 20px;
+    }
+
+    h2 {
+      color: #3b3b3b;
+    }
+
+    .product-gallery {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 20px;
+    }
+
+    .product-gallery img {
+      width: 200px;
+      height: auto;
+      border-radius: 12px;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    }
+
+    .product-gallery img:hover {
+      transform: scale(1.1);
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+    }
+  </style>
+</head>
+<body>
+  <h2>Our Products</h2>
+  <div class="product-gallery">
+    <img src="https://img.eselt.de/img/18223205_Aj1KT93eDSYpE3pG/ad.jpg" alt="Product 1">
+    <img src="https://img.eselt.de/img/18223204_EQs0O7JGqRfHYkwp/ad.jpg" alt="Product 2">
+    <img src="https://img.eselt.de/img/18223206_vNihDVgKAk4DVkXs/ad.jpg" alt="Product 3">
+    <img src="https://img.eselt.de/img/18223208_zOqrWxuOC6FUlnUH/ad.jpg" alt="Product 4">
+    <img src="https://img.eselt.de/img/18223207_M7QyQz1gHVluHFCo/ad.jpg" alt="Product 5">
+    <img src="https://img.eselt.de/img/18223216_vHtgX1UXBY5UEGoD/ad.jpg" alt="Product 6">
+    <img src="https://img.eselt.de/img/18223217_pvc9HJe5XAOS4DNC/ad.jpg" alt="Product 7">
+    <img src="https://img.eselt.de/img/18223218_MnM28PoGajhUTIjv/ad.jpg" alt="Product 8">
+    <img src="https://img.eselt.de/img/18223220_G7iebx9U70jD9EWE/ad.jpg" alt="Product 9">
+    <img src="https://img.eselt.de/img/18223219_gVBHWNza6wTui5Pi/ad.jpg" alt="Product 10">
+    <img src="https://img.eselt.de/img/18223221_TdglmksL3iZPp115/ad.jpg" alt="Product 11">
+    <img src="https://img.eselt.de/img/18223222_htTF13IERuEB14a1/ad.jpg" alt="Product 12">
+    <img src="https://img.eselt.de/img/18223223_Wf57mRyTanDsOQIA/ad.jpg" alt="Product 13">
+    <img src="https://img.eselt.de/img/18223224_7np34myHvUV5pbay/ad.jpg" alt="Product 14">
+    <img src="https://img.eselt.de/img/18223225_1egBxsMsK1AqoVMx/ad.jpg" alt="Product 15">
+    <img src="https://img.eselt.de/img/18223226_pxcAeK4js8ERLKxN/ad.jpg" alt="Product 16">
+    <img src="https://img.eselt.de/img/18223227_490VQGcsMP5Kyi91/ad.jpg" alt="Product 17">
+    <img src="https://img.eselt.de/img/18223228_FtXjUpNa8vrNUlW3/ad.jpg" alt="Product 18">
+  </div>
+</body>
+</html>
   
 </body>
 </html>
