--- a/index.html
+++ b/index.html
@@ -1,179 +1,177 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <style>
-  body {
-    margin: 0;
-    font-family: 'Segoe UI', sans-serif;
-    background: linear-gradient(to right, #ffecd2, #fcb69f);
-    color: #333;
-    text-align: center;
-  }
-
-  header {
-    background-color: #ff6f61;
-    color: white;
-    padding: 20px 0;
-    font-size: 32px;
-    font-weight: bold;
-  }
-
-  section {
-    padding: 40px 20px;
-    background-color: #ffffffaa;
-    margin: 20px auto;
-    max-width: 800px;
-    border-radius: 12px;
-    box-shadow: 0 0 20px rgba(0,0,0,0.1);
-  }
-
-  a.button {
-    background-color: #25D366;
-    color: white;
-    padding: 12px 24px;
-    text-decoration: none;
-    border-radius: 30px;
-    font-size: 18px;
-    display: inline-block;
-    margin-top: 20px;
-    transition: 0.3s;
-  }
-
-  a.button:hover {
-    background-color: #128c7e;
-  }
-
-  footer {
-    background-color: #eeeeee;
-    padding: 15px;
-    font-size: 14px;
-    color: #666;
-  }
-  </style>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Di Adore - Christian Devotional Store</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      background-color: #f9f9f9;
-      padding: 20px;
-      text-align: center;
-    }
-    header {
-      background-color: #ffffff;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      margin-bottom: 20px;
-    }
-    h1 {
-      color: #2e2e2e;
-    }
-    p {
-      color: #555;
-    }
-    .products {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 16px;
-      margin-top: 30px;
-    }
-    .product {
-      background: white;
-      border-radius: 12px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      padding: 10px;
-      width: 200px;
-    }
-    .product img {
-      width: 100%;
-      border-radius: 8px;
-    }
-    .whatsapp-button {
-      background-color: #25D366;
-      color: white;
-      padding: 12px 20px;
-      font-size: 16px;
-      text-decoration: none;
-      border-radius: 8px;
-      display: inline-block;
-      margin-top: 20px;
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <h1>Welcome to Di Adore</h1>
-    <p>Christian Devotional Articles Store</p>
-    <a class="whatsapp-button" href="https://wa.me/919074086052" target="_blank">
-      Message Us on WhatsApp
-    </a>
-  </header>
-  <!DOCTYPE html>
-<html lang="en">
-<head>
   <meta charset="UTF-8">
   <title>Di Adore Products</title>
   <style>
     body {
-      background-color: #f3f4f6;
+      background-color: #f9fafb;
       font-family: Arial, sans-serif;
       text-align: center;
       padding: 20px;
     }
 
     h2 {
-      color: #3b3b3b;
+      color: #2c3e50;
     }
 
     .product-gallery {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 20px;
+      gap: 30px;
       margin-top: 20px;
     }
 
-    .product-gallery img {
+    .product {
       width: 200px;
-      height: auto;
+      background: #ffffff;
+      padding: 10px;
       border-radius: 12px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       transition: transform 0.3s ease, box-shadow 0.3s ease;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
 
-    .product-gallery img:hover {
-      transform: scale(1.1);
-      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+    .product:hover {
+      transform: scale(1.05);
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+    }
+
+    .product img {
+      width: 100%;
+      border-radius: 8px;
+    }
+
+    .product-name {
+      margin-top: 8px;
+      font-weight: bold;
+      color: #333;
+    }
+
+    .whatsapp-btn {
+      display: inline-block;
+      margin-top: 6px;
+      padding: 6px 10px;
+      background-color: #25D366;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      text-decoration: none;
+      font-size: 14px;
+    }
+
+    .contact-us {
+      margin-top: 50px;
+    }
+
+    .contact-us a {
+      background-color: #2563eb;
+      color: white;
+      padding: 12px 24px;
+      font-size: 16px;
+      text-decoration: none;
+      border-radius: 8px;
     }
   </style>
 </head>
 <body>
   <h2>Our Products</h2>
   <div class="product-gallery">
-    <img src="https://img.eselt.de/img/18223205_Aj1KT93eDSYpE3pG/ad.jpg" alt="Product 1">
-    <img src="https://img.eselt.de/img/18223204_EQs0O7JGqRfHYkwp/ad.jpg" alt="Product 2">
-    <img src="https://img.eselt.de/img/18223206_vNihDVgKAk4DVkXs/ad.jpg" alt="Product 3">
-    <img src="https://img.eselt.de/img/18223208_zOqrWxuOC6FUlnUH/ad.jpg" alt="Product 4">
-    <img src="https://img.eselt.de/img/18223207_M7QyQz1gHVluHFCo/ad.jpg" alt="Product 5">
-    <img src="https://img.eselt.de/img/18223216_vHtgX1UXBY5UEGoD/ad.jpg" alt="Product 6">
-    <img src="https://img.eselt.de/img/18223217_pvc9HJe5XAOS4DNC/ad.jpg" alt="Product 7">
-    <img src="https://img.eselt.de/img/18223218_MnM28PoGajhUTIjv/ad.jpg" alt="Product 8">
-    <img src="https://img.eselt.de/img/18223220_G7iebx9U70jD9EWE/ad.jpg" alt="Product 9">
-    <img src="https://img.eselt.de/img/18223219_gVBHWNza6wTui5Pi/ad.jpg" alt="Product 10">
-    <img src="https://img.eselt.de/img/18223221_TdglmksL3iZPp115/ad.jpg" alt="Product 11">
-    <img src="https://img.eselt.de/img/18223222_htTF13IERuEB14a1/ad.jpg" alt="Product 12">
-    <img src="https://img.eselt.de/img/18223223_Wf57mRyTanDsOQIA/ad.jpg" alt="Product 13">
-    <img src="https://img.eselt.de/img/18223224_7np34myHvUV5pbay/ad.jpg" alt="Product 14">
-    <img src="https://img.eselt.de/img/18223225_1egBxsMsK1AqoVMx/ad.jpg" alt="Product 15">
-    <img src="https://img.eselt.de/img/18223226_pxcAeK4js8ERLKxN/ad.jpg" alt="Product 16">
-    <img src="https://img.eselt.de/img/18223227_490VQGcsMP5Kyi91/ad.jpg" alt="Product 17">
-    <img src="https://img.eselt.de/img/18223228_FtXjUpNa8vrNUlW3/ad.jpg" alt="Product 18">
+    <div class="product">
+      <img src="https://img.eselt.de/img/18223205_Aj1KT93eDSYpE3pG/ad.jpg" alt="Rosary">
+      <div class="product-name">Wooden Rosary</div>
+      <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Wooden%20Rosary" target="_blank">Enquire</a>
+    </div>
+    <div class="product">
+      <img src="https://img.eselt.de/img/18223204_EQs0O7JGqRfHYkwp/ad.jpg" alt="Cross Stand">
+      <div class="product-name">Cross Stand</div>
+      <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Cross%20Stand" target="_blank">Enquire</a>
+    </div>
+    <div class="product">
+      <img src="https://img.eselt.de/img/18223206_vNihDVgKAk4DVkXs/ad.jpg" alt="Holy Candle">
+      <div class="product-name">Holy Candle</div>
+      <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Holy%20Candle" target="_blank">Enquire</a>
+    </div>
+    <div class="product">
+      <img src="https://img.eselt.de/img/18223208_zOqrWxuOC6FUlnUH/ad.jpg" alt="Bible Keychain">
+      <div class="product-name">Bible Keychain</div>
+      <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Bible%20Keychain" target="_blank">Enquire</a>
+    </div>
+    <div class="product">
+      <img src="https://img.eselt.de/img/18223207_M7QyQz1gHVluHFCo/ad.jpg" alt="Wooden Stand">
+      <div class="product-name">Wooden Stand</div>
+      <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Wooden%20Stand" target="_blank">Enquire</a>
+    </div>
+    <div class="product">
+      <img src="https://img.eselt.de/img/18223216_vHtgX1UXBY5UEGoD/ad.jpg" alt="Mini Cross">
+      <div class="product-name">Mini Cross</div>
+      <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Mini%20Cross" target="_blank">Enquire</a>
+    </div>
+    <div class="product">
+      <img src="https://img.eselt.de/img/18223217_pvc9HJe5XAOS4DNC/ad.jpg" alt="Hanging Rosary">
+      <div class="product-name">Hanging Rosary</div>
+      <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Hanging%20Rosary" target="_blank">Enquire</a>
+    </div>
+    <div class="product">
+      <img src="https://img.eselt.de/img/18223218_MnM28PoGajhUTIjv/ad.jpg" alt="Holy Card">
+      <div class="product-name">Holy Card</div>
+      <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Holy%20Card" target="_blank">Enquire</a>
+    </div>
+    <div class="product">
+      <img src="https://img.eselt.de/img/18223220_G7iebx9U70jD9EWE/ad.jpg" alt="Jesus Poster">
+      <div class="product-name">Jesus Poster</div>
+      <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Jesus%20Poster" target="_blank">Enquire</a>
+    </div>
+    <div class="product">
+      <img src="https://img.eselt.de/img/18223219_gVBHWNza6wTui5Pi/ad.jpg" alt="Prayer Book">
+      <div class="product-name">Prayer Book</div>
+      <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Prayer%20Book" target="_blank">Enquire</a>
+    </div>
+    <div class="product">
+      <img src="https://img.eselt.de/img/18223221_TdglmksL3iZPp115/ad.jpg" alt="Mother Mary Frame">
+      <div class="product-name">Mother Mary Frame</div>
+      <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Mother%20Mary%20Frame" target="_blank">Enquire</a>
+    </div>
+    <div class="product">
+      <img src="https://img.eselt.de/img/18223222_htTF13IERuEB14a1/ad.jpg" alt="Mini Crucifix">
+      <div class="product-name">Mini Crucifix</div>
+      <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Mini%20Crucifix" target="_blank">Enquire</a>
+    </div>
+    <div class="product">
+      <img src="https://img.eselt.de/img/18223223_Wf57mRyTanDsOQIA/ad.jpg" alt="Wood Rosary Combo">
+      <div class="product-name">Wood Rosary Combo</div>
+      <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Wood%20Rosary%20Combo" target="_blank">Enquire</a>
+    </div>
+    <div class="product">
+      <img src="https://img.eselt.de/img/18223224_7np34myHvUV5pbay/ad.jpg" alt="Prayer Candle Pack">
+      <div class="product-name">Prayer Candle Pack</div>
+      <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Prayer%20Candle%20Pack" target="_blank">Enquire</a>
+    </div>
+    <div class="product">
+      <img src="https://img.eselt.de/img/18223225_1egBxsMsK1AqoVMx/ad.jpg" alt="Table Crucifix">
+      <div class="product-name">Table Crucifix</div>
+      <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Table%20Crucifix" target="_blank">Enquire</a>
+    </div>
+    <div class="product">
+      <img src="https://img.eselt.de/img/18223226_pxcAeK4js8ERLKxN/ad.jpg" alt="Decor Stand">
+      <div class="product-name">Decor Stand</div>
+      <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Decor%20Stand" target="_blank">Enquire</a>
+    </div>
+    <div class="product">
+      <img src="https://img.eselt.de/img/18223227_490VQGcsMP5Kyi91/ad.jpg" alt="Bible Table Frame">
+      <div class="product-name">Bible Table Frame</div>
+      <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Bible%20Table%20Frame" target="_blank">Enquire</a>
+    </div>
+    <div class="product">
+      <img src="https://img.eselt.de/img/18223228_FtXjUpNa8vrNUlW3/ad.jpg" alt="Gift Combo Set">
+      <div class="product-name">Gift Combo Set</div>
+      <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Gift%20Combo%20Set" target="_blank">Enquire</a>
+    </div>
   </div>
-</body>
-</html>
-  
+
+  <div class="contact-us">
+    <h3>Have a question?</h3>
+    <a href="https://wa.me/919074086052?text=Hi%2C%20I%20would%20like%20to%20know%20more%20about%20your%20products" target="_blank">Contact Us on WhatsApp</a>
+  </div>
 </body>
 </html>
