--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <h1 style="text-align: center; color: #6d4c41; padding-top: 20px;">Welcome to Di Adore</h1>
+<p style="text-align: center; font-size: 18px; color: #4e342e;">
+  Discover our handpicked collection of Christian devotional articles, flowers, and statues.  
+  Feel free to explore and message us directly on WhatsApp for any purchase!
+</p>
   <meta charset="UTF-8">
   <title>Di Adore Products</title>
   <style>
