--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
   <h2>Our Products</h2>
   <div class="product-gallery">
     <div class="product">
-      <img src="https://img.eselt.de/img/18223205_Aj1KT93eDSYpE3pG/ad.jpg" alt="Rosary">
-      <div class="product-name">Wooden Rosary</div>
+      <img src="https://img.eselt.de/img/18223205_Aj1KT93eDSYpE3pG/ad.jpg" alt="flower">
+      <div class="product-name">flower</div>
       <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Wooden%20Rosary" target="_blank">Enquire</a>
     </div>
     <div class="product">
-      <img src="https://img.eselt.de/img/18223204_EQs0O7JGqRfHYkwp/ad.jpg" alt="Cross Stand">
-      <div class="product-name">Cross Stand</div>
+      <img src="https://img.eselt.de/img/18223204_EQs0O7JGqRfHYkwp/ad.jpg" alt="flower">
+      <div class="product-name">Cross flower</div>
       <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Cross%20Stand" target="_blank">Enquire</a>
     </div>
     <div class="product">
