--- a/index.html
+++ b/index.html
@@ -89,87 +89,87 @@
     </div>
     <div class="product">
       <img src="https://img.eselt.de/img/18223204_EQs0O7JGqRfHYkwp/ad.jpg" alt="flower">
-      <div class="product-name">Cross flower</div>
+      <div class="product-name">flower</div>
       <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Cross%20Stand" target="_blank">Enquire</a>
     </div>
     <div class="product">
-      <img src="https://img.eselt.de/img/18223206_vNihDVgKAk4DVkXs/ad.jpg" alt="Holy Candle">
-      <div class="product-name">Holy Candle</div>
+      <img src="https://img.eselt.de/img/18223206_vNihDVgKAk4DVkXs/ad.jpg" alt="flower">
+      <div class="product-name">flower</div>
       <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Holy%20Candle" target="_blank">Enquire</a>
     </div>
     <div class="product">
-      <img src="https://img.eselt.de/img/18223208_zOqrWxuOC6FUlnUH/ad.jpg" alt="Bible Keychain">
-      <div class="product-name">Bible Keychain</div>
-      <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Bible%20Keychain" target="_blank">Enquire</a>
+      <img src="https://img.eselt.de/img/18223208_zOqrWxuOC6FUlnUH/ad.jpg" alt="flower">
+      <div class="product-name">Bible flower</div>
+      <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Bible%20flower" target="_blank">Enquire</a>
     </div>
     <div class="product">
-      <img src="https://img.eselt.de/img/18223207_M7QyQz1gHVluHFCo/ad.jpg" alt="Wooden Stand">
-      <div class="product-name">Wooden Stand</div>
+      <img src="https://img.eselt.de/img/18223207_M7QyQz1gHVluHFCo/ad.jpg" alt="flower">
+      <div class="product-name">flower</div>
       <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Wooden%20Stand" target="_blank">Enquire</a>
     </div>
     <div class="product">
-      <img src="https://img.eselt.de/img/18223216_vHtgX1UXBY5UEGoD/ad.jpg" alt="Mini Cross">
-      <div class="product-name">Mini Cross</div>
+      <img src="https://img.eselt.de/img/18223216_vHtgX1UXBY5UEGoD/ad.jpg" alt="flower">
+      <div class="product-name">flower</div>
       <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Mini%20Cross" target="_blank">Enquire</a>
     </div>
     <div class="product">
-      <img src="https://img.eselt.de/img/18223217_pvc9HJe5XAOS4DNC/ad.jpg" alt="Hanging Rosary">
-      <div class="product-name">Hanging Rosary</div>
-      <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Hanging%20Rosary" target="_blank">Enquire</a>
+      <img src="https://img.eselt.de/img/18223217_pvc9HJe5XAOS4DNC/ad.jpg" alt="flower">
+      <div class="product-name">flower</div>
+      <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Hanging%20flower" target="_blank">Enquire</a>
     </div>
     <div class="product">
-      <img src="https://img.eselt.de/img/18223218_MnM28PoGajhUTIjv/ad.jpg" alt="Holy Card">
-      <div class="product-name">Holy Card</div>
+      <img src="https://img.eselt.de/img/18223218_MnM28PoGajhUTIjv/ad.jpg" alt="flower">
+      <div class="product-name">flower</div>
       <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Holy%20Card" target="_blank">Enquire</a>
     </div>
     <div class="product">
-      <img src="https://img.eselt.de/img/18223220_G7iebx9U70jD9EWE/ad.jpg" alt="Jesus Poster">
-      <div class="product-name">Jesus Poster</div>
-      <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Jesus%20Poster" target="_blank">Enquire</a>
+      <img src="https://img.eselt.de/img/18223220_G7iebx9U70jD9EWE/ad.jpg" alt="flower">
+      <div class="product-name">flower</div>
+      <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20flower%20Poster" target="_blank">Enquire</a>
     </div>
     <div class="product">
-      <img src="https://img.eselt.de/img/18223219_gVBHWNza6wTui5Pi/ad.jpg" alt="Prayer Book">
-      <div class="product-name">Prayer Book</div>
-      <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Prayer%20Book" target="_blank">Enquire</a>
+      <img src="https://img.eselt.de/img/18223219_gVBHWNza6wTui5Pi/ad.jpg" alt="flower">
+      <div class="product-name">flower</div>
+      <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Prayer%20flower" target="_blank">Enquire</a>
     </div>
     <div class="product">
-      <img src="https://img.eselt.de/img/18223221_TdglmksL3iZPp115/ad.jpg" alt="Mother Mary Frame">
-      <div class="product-name">Mother Mary Frame</div>
+      <img src="https://img.eselt.de/img/18223221_TdglmksL3iZPp115/ad.jpg" alt="flower">
+      <div class="product-name">flower</div>
       <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Mother%20Mary%20Frame" target="_blank">Enquire</a>
     </div>
     <div class="product">
-      <img src="https://img.eselt.de/img/18223222_htTF13IERuEB14a1/ad.jpg" alt="Mini Crucifix">
-      <div class="product-name">Mini Crucifix</div>
+      <img src="https://img.eselt.de/img/18223222_htTF13IERuEB14a1/ad.jpg" alt="flower">
+      <div class="product-name">flower</div>
       <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Mini%20Crucifix" target="_blank">Enquire</a>
     </div>
     <div class="product">
-      <img src="https://img.eselt.de/img/18223223_Wf57mRyTanDsOQIA/ad.jpg" alt="Wood Rosary Combo">
-      <div class="product-name">Wood Rosary Combo</div>
-      <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Wood%20Rosary%20Combo" target="_blank">Enquire</a>
+      <img src="https://img.eselt.de/img/18223223_Wf57mRyTanDsOQIA/ad.jpg" alt="flower">
+      <div class="product-name">flower</div>
+      <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Wood%20Rosary%20flower" target="_blank">Enquire</a>
     </div>
     <div class="product">
-      <img src="https://img.eselt.de/img/18223224_7np34myHvUV5pbay/ad.jpg" alt="Prayer Candle Pack">
-      <div class="product-name">Prayer Candle Pack</div>
+      <img src="https://img.eselt.de/img/18223224_7np34myHvUV5pbay/ad.jpg" alt="flower">
+      <div class="product-name">flower</div>
       <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Prayer%20Candle%20Pack" target="_blank">Enquire</a>
     </div>
     <div class="product">
-      <img src="https://img.eselt.de/img/18223225_1egBxsMsK1AqoVMx/ad.jpg" alt="Table Crucifix">
-      <div class="product-name">Table Crucifix</div>
+      <img src="https://img.eselt.de/img/18223225_1egBxsMsK1AqoVMx/ad.jpg" alt="flower">
+      <div class="product-name">Table flower</div>
       <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Table%20Crucifix" target="_blank">Enquire</a>
     </div>
     <div class="product">
-      <img src="https://img.eselt.de/img/18223226_pxcAeK4js8ERLKxN/ad.jpg" alt="Decor Stand">
-      <div class="product-name">Decor Stand</div>
-      <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Decor%20Stand" target="_blank">Enquire</a>
+      <img src="https://img.eselt.de/img/18223226_pxcAeK4js8ERLKxN/ad.jpg" alt="flower">
+      <div class="product-name">flower</div>
+      <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Decor%20flower" target="_blank">Enquire</a>
     </div>
     <div class="product">
-      <img src="https://img.eselt.de/img/18223227_490VQGcsMP5Kyi91/ad.jpg" alt="Bible Table Frame">
-      <div class="product-name">Bible Table Frame</div>
+      <img src="https://img.eselt.de/img/18223227_490VQGcsMP5Kyi91/ad.jpg" alt="flower">
+      <div class="product-name">flower</div>
       <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Bible%20Table%20Frame" target="_blank">Enquire</a>
     </div>
     <div class="product">
-      <img src="https://img.eselt.de/img/18223228_FtXjUpNa8vrNUlW3/ad.jpg" alt="Gift Combo Set">
-      <div class="product-name">Gift Combo Set</div>
+      <img src="https://img.eselt.de/img/18223228_FtXjUpNa8vrNUlW3/ad.jpg" alt="flower">
+      <div class="product-name">flower</div>
       <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Gift%20Combo%20Set" target="_blank">Enquire</a>
     </div>
   </div>
