--- a/index.html
+++ b/index.html
@@ -99,17 +99,17 @@
     </div>
     <div class="product">
       <img src="https://img.eselt.de/img/18223208_zOqrWxuOC6FUlnUH/ad.jpg" alt="flower">
-      <div class="product-name">Bible flower</div>
+      <div class="product-name">flower</div>
       <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Bible%20flower" target="_blank">Enquire</a>
     </div>
     <div class="product">
-      <img src="https://img.eselt.de/img/18223207_M7QyQz1gHVluHFCo/ad.jpg" alt="flower">
-      <div class="product-name">flower</div>
+      <img src="https://img.eselt.de/img/18223207_M7QyQz1gHVluHFCo/ad.jpg" alt="statue">
+      <div class="product-name">statue</div>
       <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Wooden%20Stand" target="_blank">Enquire</a>
     </div>
     <div class="product">
-      <img src="https://img.eselt.de/img/18223216_vHtgX1UXBY5UEGoD/ad.jpg" alt="flower">
-      <div class="product-name">flower</div>
+      <img src="https://img.eselt.de/img/18223216_vHtgX1UXBY5UEGoD/ad.jpg" alt="statue">
+      <div class="product-name">statue</div>
       <a class="whatsapp-btn" href="https://wa.me/919074086052?text=I'm%20interested%20in%20Mini%20Cross" target="_blank">Enquire</a>
     </div>
     <div class="product">
